seo optimization trying

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <!-- SEO Title -->
+    <title>Ultimate Blogging Hub | Tips, Guides & Tutorials for Bloggers</title>
+
+    <!-- Meta Description -->
+    <meta name="description" content="Discover expert blogging tips, SEO guides, writing tutorials, and content marketing strategies to grow your blog and attract more readers.">
+
+    <!-- Meta Keywords -->
+    <meta name="keywords" content="blogging, blog tips, content marketing, SEO for blogs, writing tutorials, how to start a blog, grow blog audience">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Ultimate Blogging Hub | Tips, Guides & Tutorials for Bloggers">
+    <meta property="og:description" content="Explore in-depth blogging guides, writing tips, SEO strategies, and more to grow a successful blog.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.copyblogger.com">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1581090700227-1e8e8b66c3e8?auto=format&fit=crop&w=1200&q=80">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ultimate Blogging Hub | Tips, Guides & Tutorials for Bloggers">
+    <meta name="twitter:description" content="Expert blogging tips, SEO guides, and writing tutorials to help you grow your blog.">
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1581090700227-1e8e8b66c3e8?auto=format&fit=crop&w=1200&q=80">
+
   </head>
   <body>
     <div id="root"></div>
